@startuml

title __WEEK9-WEEK9_20.SENSORSANDTEMPERATUREMEASUREMENT's Class Diagram__\n

  package  {
    package application {
      class AverageSensor {
      }
    }
  }
  

  package  {
    package application {
      class AverageSensor {
      }
    }
  }
  

  package  {
    package application {
      class ConstantSensor {
      }
    }
  }
  

  package  {
    package application {
      class ConstantSensor {
      }
    }
  }
  

  package  {
    package application {
      class Main {
      }
    }
  }
  

  package  {
    package application {
      class Main {
      }
    }
  }
  

  package  {
    package application {
      interface Sensor {
      }
    }
  }
  

  package  {
    package application {
      interface Sensor {
      }
    }
  }
  

  package  {
    package application {
      class Thermometer {
      }
    }
  }
  

  package  {
    package application {
      class Thermometer {
      }
    }
  }
  

  AverageSensor -up-|> Sensor
  AverageSensor -up-|> Sensor
  ConstantSensor -up-|> Sensor
  ConstantSensor -up-|> Sensor
  Thermometer -up-|> Sensor
  Thermometer -up-|> Sensor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
